package model;

public class administrador extends funcionario {

    public administrador(int funcionarioID, String nome, String login, String senha, boolean ativo) {
        super(funcionarioID, nome, login, senha, ativo);
    }

}
